Improved CSS readability. Splitted the filters to filters and options. Bug5 Fixed it by removing the clearResults from searchBtn.onclick and instead putting it after fetching the results. Bug1 Fixed it by removing the button focus. Implemented a method that handles on init all the dropdown value updates on both load and change. Renamed per page to per call

--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
-*
-{
-	margin: 0;
-	padding: 0;
-}
-
 body
 {
 	min-height: 100vh;
 	padding: 0 2vw;
 	background-color: whitesmoke;
 	font-family: Arial, 'Times New Roman', Times, sans-serif;
+}
+
+*
+{
+	margin: 0;
+	padding: 0;
+}
+*[readonly]:hover
+{
+	cursor: not-allowed;
 }
 
 input
@@ -20,11 +24,6 @@ input
 button:hover
 {
 	cursor: pointer;
-}
-
-*[readonly]:hover
-{
-	cursor: not-allowed;
 }
 
 /* header */
@@ -57,7 +56,7 @@ button:hover
 {
 	width: fit-content;
 	padding: 2px 2px 2px 4px;
-	background-color: #CCC;
+	background-color: #DDD;
 	border: 1px solid black;
 }
 #channel-input:placeholder-shown
@@ -66,9 +65,9 @@ button:hover
 }
 #clear-channel-btn
 {
-	font-size: 1.1rem;
 	width: 25px;
 	height: 25px;
+	font-size: 1.1rem;
 	text-align: center;
 	background-color: grey;
 	border: 1px solid white;
@@ -107,18 +106,17 @@ button:hover
 	font-size: 1.25rem;
 }
 
-/* options */
-#options-wrapper
+/* filters */
+#filters-wrapper
 {
-	padding-top: 2rem;
+	padding-top: 1.5rem;
 	display: flex;
-	align-items: flex-start;
 }
-#options-wrapper > *
+#filters-wrapper > *
 {
 	margin-right: 25px;
 }
-.option-label
+.filter-label
 {
 	font-size: .9rem;
 }
@@ -130,7 +128,6 @@ button:hover
 /* Datetime range */
 #results-datetime-range-wrapper
 {
-	margin-top: .65rem;
 	display: flex;
 }
 #results-datetime-range-wrapper > *
@@ -146,6 +143,21 @@ button:hover
 {
 	margin-top: .5rem;
 	font-size: .95rem;
+}
+
+/* options */
+#options-wrapper
+{
+	margin-top: 2rem;
+	display: flex;
+}
+#options-wrapper > *
+{
+	margin-right: 25px;
+}
+.option-label
+{
+	font-size: .9rem;
 }
 
 /* results */
